k8s/hello-py/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-py
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
    - host: aksjavahelena.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /hello-py
            pathType: Prefix
            backend:
              service:
                name: hello-py
                port:
                  number: 8080
